--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 :root{
-  --pixel-font: "Press Start 2P", sans-serif;
+  --pixel-font: "Press Start 2P", serif;
   --black-border: 3px solid black;
   --black-background: rgba(0, 0, 0, 0.5);
   --main-btn-bg: #fff700;
@@ -10,6 +14,8 @@
   --nav-btn-shadow: #444444;
   --text-color: #FFF8F0;
   --dark-text: #001219;
+  --large-font: 1.5em;
+  --large-font-padding: .5em 1em;
 }
 
 *{
@@ -30,15 +36,39 @@
     background-image: url(./assets/snap2024-11-29-13-43-43.png);
     background-position: center;
     padding: 2em;
+    gap: .5em;
     border: 5px solid #7c7b69;
     height: 100%;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(7, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
+    display: flex;
+    flex-wrap: wrap;
     z-index: 100;
   }
+    .header{
+      width: 100vw;
+      height: fit-content;
+    }
+    .contentBody{
+      display: flex;
+      flex-direction: row;
+      gap: .5em;
+    }
+    .tokeSaleUserInfo{
+      width: 30%;
+    }
+    .header,
+    .tokeSaleUserInfo,
+    .aboutUsFooter,
+    .tokenomics{
+      display: flex;
+      gap: .5em;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .tokeSaleUserInfo,
+    .aboutUsFooter,
+    .tokenomics{
+      width: 30%;
+    }
 
   
