--- a/src/components/tokenSale/tokenSale.css
+++ b/src/components/tokenSale/tokenSale.css
@@ -1,6 +1,4 @@
 .tokeSaleBody{
-    border: 1px solid red;
-    grid-area: 2 / 1 / 5 / 3;
     padding: 1em;
     border: var(--black-border);
     background-color: var(--black-background);
@@ -9,6 +7,7 @@
 .tokeSaleContent{
     height: 100%;
     display: flex;
+    gap: .5em;
     justify-content: space-between;
     flex-direction: column;
 }
