--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   --text-color: #FFF8F0;
   --dark-text: #001219;
   --large-font: 1.5em;
-  --large-font-padding: .5em 1em;
+  --large-font-padding: .3em 1em;
 }
 
 *{
@@ -26,49 +26,38 @@
 }
 .body{
   height: 100vh;
+  width: 100%;
   background-image: url(./assets/BodyBackground.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 5em 10em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
   .content{
     background-image: url(./assets/snap2024-11-29-13-43-43.png);
-    background-position: center;
-    padding: 2em;
-    gap: .5em;
-    border: 5px solid #7c7b69;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    z-index: 100;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    padding: 1em;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    gap: 1em;
+    border: 5px solid #8f8e7e;
+    height: 90%;
+    width: 80%;
   }
-    .header{
-      width: 100vw;
-      height: fit-content;
+  .blinking{
+    animation: blinkingBorder .3s infinite;
+  }
+  @keyframes blinkingBorder {
+    0%,
+    100%{
+      outline: 5px solid transparent;
     }
-    .contentBody{
-      display: flex;
-      flex-direction: row;
-      gap: .5em;
+    50%{
+      outline: 5px solid red;
     }
-    .tokeSaleUserInfo{
-      width: 30%;
-    }
-    .header,
-    .tokeSaleUserInfo,
-    .aboutUsFooter,
-    .tokenomics{
-      display: flex;
-      gap: .5em;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .tokeSaleUserInfo,
-    .aboutUsFooter,
-    .tokenomics{
-      width: 30%;
-    }
-
+  }
   
