--- a/src/components/aboutUs/aboutUs.css
+++ b/src/components/aboutUs/aboutUs.css
@@ -1,3 +1,17 @@
 .aboutUsBody{
-    border: 1px solid red;
+    grid-area: 6 / 4 / 9 / 8;
+    padding: 1em;
+    border: var(--black-border);
+    background-color: var(--black-background);
+    
 }
+    .aboutUsBody p{
+        color: var(--text-color);
+        padding: .5em;
+        border: var(--black-border);
+        background-color: var(--black-background);
+        font-size: 1em;
+        font-family: var(--pixel-font);
+        line-height: 1.2em;
+        backdrop-filter: blur(1px);
+    }
