--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,3 +1,53 @@
-.footerBody{
-    border: 1px solid red;
+.footerBody {
+  border: 3px solid black;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  grid-area: 9 / 4 / 10 / 8;
+  position: relative;
+  backdrop-filter: blur(1px);
+  padding: 0.5em;
+  gap: 0.5em;
+  flex-direction: row;
+  z-index: 1;
+  outline: 6px solid transparent;
+  display: flex;
+}
+.socials{
+  width: 40%;
+  display: flex;
+  border: var(--black-border);
+  background-color: var(--black-background);
+}
+.socialLink{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all .1s ease-in-out;
+  cursor: pointer;
+}
+.socialLink img{
+  height: 2em;
+  transition: all .1s ease-in-out;
+}
+.socialLink:hover img{
+  height: 2.5em;
+}
+.supportContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--pixel-font);
+  color: var(--text-color);
+  font-size: .9em;
+  border: var(--black-border);
+  background-color: var(--black-background);
+  width: 100%;
+  transition: .2s ease-in-out;
+  cursor: pointer;
+}
+.supportContainer:hover{
+  background-color: var(--main-btn-bg);
+  color: var(--dark-text);
 }
