--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,6 @@
 .headerBody{
     display: flex;
-    width: 100%;
-    height: fit-content;
-
+    grid-area: 1 / 1 / 2 / 11;
 }
     .logo{
         display: flex;
