--- a/src/components/tokenSale/tokenSale.css
+++ b/src/components/tokenSale/tokenSale.css
@@ -1,10 +1,11 @@
-.tokeSaleBody{
+.tokenSaleBody{
+    grid-area: 2 / 1 / 6 / 4;
     padding: 1em;
     border: var(--black-border);
     background-color: var(--black-background);
     font-family: var(--pixel-font);
 }
-.tokeSaleContent{
+.tokenSaleContent{
     height: 100%;
     display: flex;
     gap: .5em;
@@ -21,6 +22,7 @@
         align-items: center;
         padding: 1em;
         width: 100%;
+        backdrop-filter: blur(1px);
     }
     .liveContainer{
         border: var(--black-border);
@@ -32,20 +34,24 @@
         padding: 1em;
         height: fit-content;
         font-size: .7em;
+        backdrop-filter: blur(1px);
     }
         .liveContainer p{
             color: red;
             height: fit-content;
+            padding-top: .5em;
         }
         .redCircle{
             border-radius: 50%;
             height: .9em;
             width: .9em;
             background-color: red;
+            padding-top: .5em;
         }
         .liveTimer{
             color: var(--text-color);
             height: fit-content;
+            padding-top: .5em;
         }
     .stageContainer{
         border: var(--black-border);
@@ -54,12 +60,17 @@
         padding: 1em;
         font-size: .7em;
         text-align: center;
+        backdrop-filter: blur(1px);
     }
+        .stageContainer p{
+            padding-top: .5em;
+        }
     .buyNowBtn{
         border: var(--black-border);
         background-color: var(--black-background);
-        padding: .5em .5em 1em .5em;
-        text-align: center;  
+        padding: .5em;
+        text-align: center; 
+        backdrop-filter: blur(1px); 
     }
         .buyNowBtn button{
             padding: .5em;
