--- a/src/App.css
+++ b/src/App.css
@@ -36,17 +36,19 @@
   align-items: center;
 }
   .content{
-    background-image: url(./assets/snap2024-11-29-13-43-43.png);
-    background-size: 100% 100%;
-    background-attachment: fixed;
+    background-image: url(./assets/contentBackground.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 80%;
+    height: 90%;
     padding: 1em;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(9, 1fr);
     gap: 1em;
     border: 5px solid #8f8e7e;
-    height: 90%;
-    width: 80%;
+    will-change: transform;
   }
   .blinking{
     animation: blinkingBorder .3s infinite;
