--- a/src/components/aboutUs/aboutUs.css
+++ b/src/components/aboutUs/aboutUs.css
@@ -12,6 +12,10 @@
         background-color: var(--black-background);
         font-size: 1em;
         font-family: var(--pixel-font);
-        line-height: 1.2em;
+        line-height: 1.6em;
         backdrop-filter: blur(1px);
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
