--- a/src/components/tokenSale/tokenSale.css
+++ b/src/components/tokenSale/tokenSale.css
@@ -47,6 +47,16 @@
             width: .9em;
             background-color: red;
             padding-top: .5em;
+            animation: pulse 1.5s infinite;
+        }
+        @keyframes pulse {
+            0%,
+            100%{
+                background-color: rgb(100, 0, 0);
+            }
+            50%{
+                background-color: red;
+            }
         }
         .liveTimer{
             color: var(--text-color);
@@ -73,5 +83,28 @@
         backdrop-filter: blur(1px); 
     }
         .buyNowBtn button{
+            box-shadow: 5px 5px 0px var(--main-btn-shadow);
+            background-color: #4e4b00;
             padding: .5em;
+            animation: buyBtnBlinking 1.5s infinite;
         }
+        .buyNowBtn button:hover{
+            box-shadow: 0px 0px 100px #fff700,
+                        5px 5px 0px var(--main-btn-shadow);
+            animation: none;
+        }
+        .buyNowBtn button:active {
+            box-shadow: none;
+            transform: translate( 5px, 5px);
+        }
+        @keyframes buyBtnBlinking {
+            0%, 20%, 45%, 60%, 75%, 90%, 100% {
+                box-shadow: 0px 0px 100px #fff700;
+                background-color: var(--main-btn-bg);
+            }
+            10%, 30%, 55%, 70%, 80%, 95% {
+                background-color: #4e4b00;
+                box-shadow: 5px 5px 0px var(--main-btn-shadow);
+            }
+        }
+        
