--- a/src/components/userInfo/userInfo.css
+++ b/src/components/userInfo/userInfo.css
@@ -4,6 +4,7 @@
     border: var(--black-border);
     background-color: var(--black-background);
     font-family: var(--pixel-font);
+    box-shadow: var(--elements-shadow);
 }
 .userInfoContent{
     height: 100%;
