--- a/src/components/spin/spinContainer.css
+++ b/src/components/spin/spinContainer.css
@@ -1,3 +1,48 @@
+.modalBody{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    height: 100%;
+    width: 100%;
+    backdrop-filter: blur(3px);
+    z-index: 1000;
+}
+
+.modalContent{
+    border: 5px solid #8f8e7e;
+    width: 30%;
+    height: 30%;
+    background-image: url(../../assets/contentBackground.png);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+}
+
+.modalContent button{
+    width: fit-content;
+}
+
+.modalSection{
+    padding: 1em;
+    border: var(--black-border);
+    background-color: var(--black-background);
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+.modalSection h1{
+    width: 100%;
+    text-align: center;
+}
+
 .spinContainerBody {
     grid-area: 2 / 4 / 6 / 8;
     padding: 1em;
@@ -5,6 +50,7 @@
     background-color: var(--black-background);
     font-family: var(--pixel-font);
     display: flex;
+    box-shadow: var(--elements-shadow);
 }
 
 .spinBtnContainer {
