--- a/src/components/tokenomics/tokenomics.css
+++ b/src/components/tokenomics/tokenomics.css
@@ -5,6 +5,7 @@
     background-color: var(--black-background);
     font-family: var(--pixel-font);
     color: var(--text-color);
+    box-shadow: var(--elements-shadow);
     height: 100%;
     display: flex;
     flex-direction: column;
