--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,90 +1,100 @@
-.headerBody{
-    display: flex;
-    grid-area: 1 / 1 / 2 / 11;
+.headerBody {
+  display: flex;
+  grid-area: 1 / 1 / 2 / 11;
 }
-    .logo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 5%;
-    }
-        .logo img{
-            height: 4em;
-        }
-    .headerContainer{
-        border: var(--black-border);
-        background-color: var(--black-background);
-        display: flex;
-        justify-content: space-between;
-        padding: .4em;
-        width: 95%;
-        box-shadow: var(--elements-shadow);
-    }
-        .logoContainer{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 30%;
-        }
-            .buyBtn{
-                font-size: var(--large-font);
-                font-weight: 400;
-                background-color: var(--main-btn-bg);
-                color: black;
-                border: 3px solid var(--main-btn-border);
-                padding: var(--large-font-padding);
-                border-radius: 5px;
-                font-family: var(--pixel-font);
-                box-shadow: 5px 5px 0px var(--main-btn-shadow);
-                transition: box-shadow 0.1s, transform 0.1s;
-                cursor: pointer;
-                margin-bottom: 5px;
-            }
-        .navContainer{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 60%;
-        }
-            .navBtn{
-                font-size: 1em;
-                font-weight: 400;
-                background-color: var(--nav-btn-bg);
-                color: black;
-                border: 3px solid var(--nav-btn-border);
-                border-radius: 5px;
-                padding: .5em;
-                font-family: var(--pixel-font);
-                cursor: pointer;
-                box-shadow: 5px 5px 0px var(--nav-btn-shadow);
-                transition: box-shadow 0.1s, transform 0.1s;
-            }
-                .navBtn:hover{
-                    background-color: #c4c4c4;
-                }
-                .navBtn:active{
-                    background-color: #9e9e9e;
-                    transform: translate( 5px, 5px);
-                    box-shadow: none;
-                }
-            .buyBtn{
-                font-size: var(--large-font);
-                font-weight: 600;
-                background-color: var(--main-btn-bg);
-                color: black;
-                border: 3px solid var(--main-btn-border);
-                padding: var(--large-font-padding);
-                border-radius: 5px;
-                font-family: var(--pixel-font);
-                box-shadow: 5px 5px 0px var(--main-btn-shadow);
-                transition: box-shadow 0.1s, transform 0.1s;
-                cursor: pointer;
-            }
-                .buyBtn:hover{
-                    background-color: #e2db00;
-                }
-                .buyBtn:active{
-                    background-color: #c0ba00;
-                    transform: translate( 5px, 5px);
-                    box-shadow: none;
-                }
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+}
+.logo img {
+  height: 4em;
+}
+.headerContainer {
+  border: var(--black-border);
+  background-color: var(--black-background);
+  display: flex;
+  justify-content: space-between;
+  padding: 0.4em;
+  width: 95%;
+  box-shadow: var(--elements-shadow);
+}
+.logoBaner {
+  border: 3px solid var(--main-btn-border);
+  padding: .3em 1em;
+  font-size: 1.5em;
+  font-weight: 400;
+  background-color: var(--main-btn-bg);
+  box-shadow: 5px 5px 0px var(--main-btn-shadow);
+  border-radius: 5px;
+  font-family: var(--pixel-font);
+}
+.logoContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 30%;
+}
+.buyBtn {
+  font-size: var(--large-font);
+  font-weight: 400;
+  background-color: var(--main-btn-bg);
+  color: black;
+  border: 3px solid var(--main-btn-border);
+  padding: var(--large-font-padding);
+  border-radius: 5px;
+  font-family: var(--pixel-font);
+  box-shadow: 5px 5px 0px var(--main-btn-shadow);
+  transition: box-shadow 0.1s, transform 0.1s;
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+.navContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+}
+.navBtn {
+  font-size: 1em;
+  font-weight: 400;
+  background-color: var(--nav-btn-bg);
+  color: black;
+  border: 3px solid var(--nav-btn-border);
+  border-radius: 5px;
+  padding: 0.5em;
+  font-family: var(--pixel-font);
+  cursor: pointer;
+  box-shadow: 5px 5px 0px var(--nav-btn-shadow);
+  transition: box-shadow 0.1s, transform 0.1s;
+}
+.navBtn:hover {
+  background-color: #c4c4c4;
+}
+.navBtn:active {
+  background-color: #9e9e9e;
+  transform: translate(5px, 5px);
+  box-shadow: none;
+}
+.buyBtn {
+  font-size: var(--large-font);
+  font-weight: 600;
+  background-color: var(--main-btn-bg);
+  color: black;
+  border: 3px solid var(--main-btn-border);
+  padding: var(--large-font-padding);
+  border-radius: 5px;
+  font-family: var(--pixel-font);
+  box-shadow: 5px 5px 0px var(--main-btn-shadow);
+  transition: box-shadow 0.1s, transform 0.1s;
+  cursor: pointer;
+}
+.buyBtn:hover {
+  background-color: #e2db00;
+}
+.buyBtn:active {
+  background-color: #c0ba00;
+  transform: translate(5px, 5px);
+  box-shadow: none;
+}
